# barcode_pipeline

./: README.md  ont_barcodes.yml  pyproject.toml
barcode_pipeline/: __init__.py  barcodes_used.R  convert_barcode_names.R  coverage_plot.R  make_dorado_samplesheet.R  make_plots_tables.R  ont_barcodes_analysis.py
