[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "barcode_pipeline"
authors = []
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]


[project.scripts]
demux-pipeline = "barcode_pipeline:ont_barcodes_analysis.cli"